# agents-with-adk

./: .bandit  .flake8  DEPLOYMENT.md  MANIFEST.in  MCP_MIGRATION_SUMMARY.md  MEANINGFUL_INTEGRATIONS.md  Makefile  PRODUCTION_FIXES.md  README.md  REORGANIZATION_PROPOSAL.md  REORGANIZATION_STATUS.md  TEST_FAILURES_ANALYSIS.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/workflows/: README.md  ci.yml  deploy-production.yml  deploy-staging.yml  tests.yml
development_tutor/: prompt.py
development_tutor/shared_libraries/: constants.py
development_tutor/sub_agents/researcher/: agent.py  prompt.py
development_tutor/tools/: search.py
docs/: agent_architecture.md
eval/eval_data/: chat.test.json
evals/: README.md  __init__.py  run_all_evals.py  test_eval.py
evals/eval_data/: README.md  code_quality_eval.json  security_eval.json
evals/results/: .gitkeep
examples/: .env.example  basic_review.py
integrations/: GITHUB_INTEGRATION.md  MIGRATION_TO_MCP.md  README.md
integrations/direct_api/: MCP_COOKBOOK.md  README.md  example_agent_with_github_tools.py  example_custom_workflow.py  example_simple_review.py
integrations/github_actions/: review_pr.py
integrations/github_app/: .env.example  github-app-manifest.json  requirements.txt  test_webhook.sh  webhook_handler.py
integrations/github_cli/: README.md  SETUP.md  review_files.py  review_pr.py
python_codebase_reviewer/: INTEGRATION_GUIDE.md  README.md  prompt.py
python_codebase_reviewer/direct_api/: SETUP.md  example_agent_with_github_tools.py  example_simple_review.py
python_codebase_reviewer/eval/eval_data/: architecture_eval.json  orchestrator_eval.json  performance_eval.json  python_expert_eval.json
python_codebase_reviewer/github_actions/: README.md  SETUP.md  code-review.yml  review_pr.py
python_codebase_reviewer/github_app/: .gitignore  Dockerfile  README.md  SETUP.md  deploy.sh  run_local.sh  setup_secrets.sh  webhook_handler.py
python_codebase_reviewer/shared_libraries/: __init__.py  models.py
python_codebase_reviewer/sub_agents/code_quality_reviewer/: __init__.py  prompt.py
python_codebase_reviewer/sub_agents/performance_reviewer/: __init__.py  agent.py  prompt.py
python_codebase_reviewer/sub_agents/python_expert/: __init__.py  agent.py
python_codebase_reviewer/sub_agents/security_reviewer/: agent.py
python_codebase_reviewer/tools/: __init__.py  github_tools.py
src/python_codebase_reviewer/: __init__.py  agent.py
src/python_codebase_reviewer/shared_libraries/: constants.py  logging_config.py
src/python_codebase_reviewer/sub_agents/: __init__.py
src/python_codebase_reviewer/sub_agents/architecture_reviewer/: __init__.py  agent.py  prompt.py
src/python_codebase_reviewer/sub_agents/code_quality_reviewer/: agent.py  prompt.py
src/python_codebase_reviewer/sub_agents/python_expert/: prompt.py
src/python_codebase_reviewer/sub_agents/security_reviewer/: __init__.py  prompt.py
src/python_codebase_reviewer/tools/: __init__.py  github_tools.py
tests/: README.md  conftest.py  test_github_app.py  test_github_cli.py  test_github_tools.py
